--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@liberu-ui/uploader",
   "version": "2.0.21",
   "description": "File Uploader",
-  "main": "bulma/index.js",
+  "main": "bulma/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
